--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
@@ -21,9 +21,9 @@
     </object>
   </div>
 
-  <div class="action-content"><span class="download_link"><a target="_blank" href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></span></div>
+  <div class="action-content download_link"<a target="_blank" href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></div>
 
-  <h3 class="html-content summary">{{ media.description|smart_style }}</h3>
+  <div class="html-content summary">{{ media.description|smart_style }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
