--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_detail.html
@@ -12,7 +12,7 @@
 
   <div class="media-content detail_picture"><img src="{% version media.image.path 'big' %}"/></div>
 
-  <h3 class="html-content summary">{{ media.description|smart_style }}</div>
+  <div class="html-content summary">{{ media.description|smart_style }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
