--- a/cyclope/templates/cyclope/themes/neutrona/4_elements.html
+++ b/cyclope/templates/cyclope/themes/neutrona/4_elements.html
@@ -8,7 +8,9 @@
 <div class="grid_19">
 <div id="fire">
   {% region 'before_fire' %}
+  <div class="content_fire">
   {% block content %} {% endblock %}
+  </div>
   {% region 'after_fire' %}
 </div>
 </div>
