--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -60,7 +60,7 @@ AIR
 		<h1><a href="/">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
 		<h2><a href="/">http://{{ CYCLOPE_SITE_SETTINGS.site.domain }}</a></h2>
 	</div>
-		<hr class="clear">
+		<div class="clear"></div>
 
 <!-------------------------------------------------------------------------------------------------
 MEDIANERA
@@ -70,7 +70,7 @@ MEDIANERA
 <!-------------------------------------------------------------------------------------------------
 WATER
 ------------------------------------------------------------------------------------------------->
-        <div class="grid_5">
+        <div class="grid_5" >
 
           {% region 'water' %}
          
