--- a/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
@@ -14,4 +14,4 @@
     so.addVariable('file','{{ media_file }}');
     so.write('{{ current_object.slug }}_player');
   </script>
-  <div><span class="download_link"><a href="{{ media_file }}">{% trans "download file" %}</a></span></div>
+  <div class="download_link"><a href="{{ media_file }}">{% trans "download file" %}</a></div>
