--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
@@ -14,7 +14,7 @@
   {% assign player_height '320' %}
   {% include 'medialibrary/media_player.html' %}
 
-  <h3 class="html-content summary">{{ media.description|smart_style }}</h3>
+  <div class="html-content summary">{{ media.description|smart_style }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
