First solution to issue #120: 'Handle static/ and media/ in the 1.3 way'. This is a workarround until all apps release a stable version compatible with staticfiles.

--- a/cyclope/templates/admin/base_content_change_form.html
+++ b/cyclope/templates/admin/base_content_change_form.html
@@ -3,7 +3,7 @@
 
 {% block extrastyle %}
 {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{ CYCLOPE_MEDIA_URL }}css/tabbed_collections.css" />
+<link rel="stylesheet" type="text/css" href="{{ CYCLOPE_STATIC_URL }}css/tabbed_collections.css" />
 {% endblock %}
 
 
