--- a/cyclope/core/collections/templates/collections/category_root_items_list.html
+++ b/cyclope/core/collections/templates/collections/category_root_items_list.html
@@ -1,6 +1,6 @@
-{% extends host_template %}
+{% extends 'collections/category_contents_base.html' %}
 
-{% block content %}
+{% block category_content %}
 
 {% comment %}
 TODO(nicoechaniz): adapt this view to work in the same way as category_teaser_list, by providing a [content_type]_listing_view.html (or whatever better name) for every base content type, like we do with [content_type]_teaser.html
@@ -16,4 +16,4 @@ TODO(nicoechaniz): adapt this view to work in the same way as category_teaser_li
 {% endfor %}
 </ul>
 </div>
-{% endblock content%}
+{% endblock category_content %}
