--- a/cyclope/core/collections/templates/collections/category_list_as_forum.html
+++ b/cyclope/core/collections/templates/collections/category_list_as_forum.html
@@ -13,7 +13,7 @@
   <table >
       <tr>
         <th class="name">{% comment %}{% trans 'Name' %}{% endcomment %}Temas</th>
-        <th class="comments">{% comment %}El nombre deberías ser Temas. Asi se pude achicas la columna. no como como cambiarlo en el languaje
+        <th class="comments">{% comment %}El nombre deberaas ser Temas. Asi se pude achicas la columna. no como como cambiarlo en el languaje
         {% trans 'Comments' %}{% endcomment %}Mensajes</th>
         <th class="created">{% trans 'Created' %}</th>
         <th class="last_comment">{% comment %}{% trans 'Last comment' %}{% endcomment %}Últimos mensajes</th>
