--- a/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
+++ b/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
@@ -6,6 +6,10 @@
         $(el).children('ul').css('display', 'none');
     }
 
+    var show_children = function (el){
+        $(el).children('ul').css('display', 'block');
+    }
+
     jQuery(document).ready(function(){
         var menu_align = '{{ align }}';
 
