fixed download link for regular files in detail view

--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
@@ -13,7 +13,7 @@
   {% if media.image %}
     <div class="media-content"><img src="{% version media.image.path 'big' %}"/></div>
   {% endif %}
-  <div class="action-content download_link"><a href="{{ media.document }}">{% trans "download file" %}</a></div>
+  <div class="action-content download_link"><a href="{{ media.file }}">{% trans "download file" %}</a></div>
 
   <div class="html-content summary">{{ media.description|smart_style }}</div>
 
