--- a/cyclope/core/collections/templates/collections/category_labeled_icon_list.html
+++ b/cyclope/core/collections/templates/collections/category_labeled_icon_list.html
@@ -11,7 +11,7 @@
   <div class="icon_list_container">
 
   {% for categorization in categorizations %}
-    {% join categorization.content_type.app_label  "/" categorization.content_type.model "_labeled_icon.html" as template_path %}
+    {% join categorization.content_type.app_label  "/" categorization.content_type.model "_" inline_view_name ".html" as template_path %}
 
     {% comment %}
       we alias the actual object with the model name
