--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -3,17 +3,15 @@
 {% load i18n cyclope_utils fb_versions %}
 
 {% block extra_head %}
-<script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jcarousellite.min.js"></script>
+<script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript">
-  $(document).ready(function() {
-      $("#slideshow{% if region_name %}-{{region_name}}{% endif %}").jCarouselLite({
+jQuery(document).ready(function() {
+    jQuery("#slideshow{% if region_name %}-{{region_name}}{% endif %}-{{category_slug}}").jcarousel({
         visible: {{view_options.visible_items}},
         scroll: {{view_options.scroll_by}},
-        auto: {% if view_options.auto_play %}{{view_options.delay}}{% else %}null{% endif %},
-        circular: {% if view_options.circular %}true{% else %}false{% endif %},
-        btnNext: ".next",
-        btnPrev: ".prev",
-        speed: {{view_options.speed}},
+        wrap: {{view_options.navigation|safe}},
+        auto: {% if view_options.auto_play %}{{view_options.delay}}{% else %}0{% endif %},
+        animation: {{view_options.speed}}
     });
 });
 </script>
@@ -24,8 +22,7 @@
   The content of this view is composed by including a template for each content in the category
   The included template may be something different from a teaser
   {% endcomment %}
-  <div id="slideshow{% if region_name %}-{{region_name}}{% endif %}" class="slideshow">
-    <ul>
+    <ul id="slideshow{% if region_name %}-{{region_name}}{% endif %}-{{category_slug}}" class="slideshow">
     {% for categorization in categorizations %}
       {% join categorization.content_type.app_label  "/" categorization.content_type.model "_" inline_view_name ".html" as template_path %}
 
@@ -45,5 +42,4 @@
       <li>{% include template_path %}</li>
     {% endfor %}
     </ul>
-  </div>
 {% endblock %}
