css for slideshow and fix templates

--- a/cyclope/apps/articles/templates/articles/article_slideshow_item.html
+++ b/cyclope/apps/articles/templates/articles/article_slideshow_item.html
@@ -1,17 +1,25 @@
 {% load i18n fb_versions cyclope_utils dbgettext_tags %}
-  <div class="slideshow">
+  <div class="slideshow article teaser">
+
+    {% if view_options.show_image %}
+    <div class="teaser_icon_container">
+          <img title="article" class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" border="0"/>
     <a href="{% url article-detail article.slug %}">
-      {% if view_options.show_image %}
         {% if article.pictures %}
+            {% if not view_options.show_title and not view_options.show_description %}
+          <img class="icon big" src="{% version article.pictures.0.image.path 'big' %}" border="0"/>
+            {% else %}
           <img class="icon" src="{% version article.pictures.0.image.path 'slideshow' %}" border="0"/>
+            {% endif %}
         {% else %}
-          <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" border="0"/>
           <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
         {% endif %}
-      {% endif %}
     </a>
+    </div>
+    {% endif %}
+
     {% if view_options.show_title %}
-    <h2 class="title"><a href="{% url article-detail article.slug %}">{{article.name|truncatechars:40}}</a></h2>
+    <h2 class="title"><a href="{% url article-detail article.slug %}">{{ article.name|truncatechars:70 }}</a></h2>
     {% endif %}
 
     {% if view_options.show_description %}
