--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -7,12 +7,10 @@
 <script type="text/javascript">
     // jCarousel documentation http://sorgalla.com/projects/jcarousel/
 
-    // TODO: add this option, 'autopause': the carousel stop when user hover or next/prev clic
-{% if view_options.autopause %}
-    function CarouselAutopause(carousel)
-    {
+  {% if view_options.auto_pause %}
+      function CarouselAutopause(carousel)
+      {
         // Disable autoscrolling if the user clicks the prev or next button.
-
         carousel.buttonNext.bind('click', function() {
             carousel.startAuto(0);
         });
@@ -21,32 +19,23 @@
         });
 
         // Pause autoscrolling if the user moves with the cursor over the clip.
-
         carousel.clip.hover(function() {
             carousel.stopAuto();
         }, function() {
             carousel.startAuto();
         });
-    };
-{% endif %}
+      };
+  {% endif %}
 
-jQuery(document).ready(function() {
-    jQuery("#slideshow{% if region_name %}-{{region_name}}{% endif %}-{{category_slug}}").jcarousel({
-{% comment %}
-       // 'visible' is not 'visible' number of items! -> http://sorgalla.com/projects/jcarousel/#Configuration
-       // TODO: this option will be deleted??
-       visible: {{view_options.visible_items}},
-{% endcomment %}
-       scroll: {{view_options.scroll_by}},
-       wrap: {{view_options.navigation|safe}},
-       auto: {% if view_options.auto_play %}{{view_options.delay}}{% else %}0{% endif %},
-       animation: {{view_options.speed}}
-       // TODO: 'autopause' option
-    {% if view_options.autopause %}
-       , initCallback: CarouselAutopause
-    {% endif %}
-    });
-});
+  jQuery(document).ready(function() {
+      jQuery("#slideshow{% if region_name %}-{{region_name}}{% endif %}-{{category_slug}}").jcarousel({
+         scroll: {{view_options.scroll_by}},
+         wrap: {{view_options.navigation|safe}},
+         auto: {% if view_options.auto_play %}{{view_options.delay}}{% else %}0{% endif %},
+         animation: {{view_options.speed}},
+         initCallback: {% if view_options.auto_pause %}CarouselAutopause{% else %}null{% endif %}
+      });
+  });
 </script>
 <link rel="stylesheet" type="text/css" href="{{ CYCLOPE_THEME_MEDIA_URL }}css/jcarousel.css" />
 {% endblock %}
@@ -56,6 +45,7 @@ jQuery(document).ready(function() {
   The content of this view is composed by including a template for each content in the category
   The included template may be something different from a teaser
   {% endcomment %}
+    {% comment %}TODO: review the ID definition{% endcomment %}
     <ul id="slideshow{% if region_name %}-{{region_name}}{% endif %}-{{category_slug}}" class="jcarousel-skin-cyclope">
     {% for categorization in categorizations %}
       {% join categorization.content_type.app_label  "/" categorization.content_type.model "_" inline_view_name ".html" as template_path %}
